Final details before publishing

--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,19 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <title>openqube</title>
+  <meta property="og:locale" content="es_ES" />
+  <meta property="og:type" content="article" />
+  <meta property="og:title" content="openqube &mdash; Resultados de la encuesta de sueldos sysarmy 2019.01" />
+  <meta property="og:description" content="Lo que no te cuentan en la entrevista" />
+  <meta property="og:url" content="https://openqube.io/encuesta-sueldos-2019.01" />
+  <meta property="og:site_name" content="openqube" />
+  <meta property="fb:app_id" content="376651492541539" />
+  <meta property="og:image" content="http://openqube.io/img/fbshare.png" />
+  <meta name="twitter:card" content="summary"/>
+  <meta name="twitter:description" content="Lo que no te cuentan en la entrevista"/>
+  <meta name="twitter:title" content="openqube &mdash; Resultados de la encuesta de sueldos sysarmy 2019.01"/>
+  <meta name="twitter:site" content="@openqube"/>
+  <meta name="twitter:image" content="http://openqube.io/img/fbshare.png"/>
 </head>
 
 <body>
