--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,9 @@
   <meta name="twitter:title" content="openqube &mdash; Resultados de la encuesta de sueldos sysarmy 2019.01"/>
   <meta name="twitter:site" content="@openqube"/>
   <meta name="twitter:image" content="http://openqube.io/img/fbshare.png"/>
+  <!-- Google Tag Manager -->
+  <script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0],j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='https://www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);})(window,document,'script','dataLayer','GTM-MG6V7ZG');</script>
+  <!-- End Google Tag Manager -->
 </head>
 
 <body>
